--- a/mysite/templates/mysite/service.html
+++ b/mysite/templates/mysite/service.html
@@ -32,14 +32,13 @@
                         <div class="bg-secondary btn-xl-square mx-auto" style="width: 120px; height: 120px;">
                             <i class="fas fa-home text-primary fa-4x"></i>
                         </div>
-                        <a href="#" class="d-block fs-4 my-4">General Construction</a>
-                        <p class="text-white mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia,
-                            minima!</p>
-                        <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
+                        <a href="#" class="d-block fs-4 my-4">Residential Construction</a>
+                        <p class="text-white mb-4">We design and build modern, durable, and comfortable homes tailored to your lifestyle.</p>
+                        <!-- <a class="btn btn-secondary py-2 px-4" href="#">Read More</a> -->
                     </div>
                     <div class="service-tytle">
                         <div class="d-flex align-items-center ps-4 w-100">
-                            <h4>General Construction</h4>
+                            <h4>Residential Construction</h4>
                         </div>
                         <div class="btn-xl-square bg-secondary p-4" style="width: 80px; height: 80px;">
                             <i class="fas fa-home text-primary fa-2x"></i>
@@ -56,14 +55,13 @@
                         <div class="bg-secondary btn-xl-square mx-auto" style="width: 120px; height: 120px;">
                             <i class="fas fa-users-cog text-primary fa-4x"></i>
                         </div>
-                        <a href="#" class="d-block fs-4 my-4">Property Maintenance</a>
-                        <p class="text-white mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia,
-                            minima!</p>
-                        <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
+                        <a href="#" class="d-block fs-4 my-4">Commercial Construction</a>
+                        <p class="text-white mb-4">From office complexes to retail spaces, we deliver functional, high-quality business environments.</p>
+                        <!-- <a class="btn btn-secondary py-2 px-4" href="#">Read More</a> -->
                     </div>
                     <div class="service-tytle">
                         <div class="d-flex align-items-center justify-content-start ps-4 w-100">
-                            <h4>Property Maintenance</h4>
+                            <h4>Commercial Construction</h4>
                         </div>
                         <div class="btn-xl-square bg-secondary p-4" style="width: 80px; height: 80px;">
                             <i class="fas fa-users-cog text-primary fa-2x"></i>
@@ -80,14 +78,13 @@
                         <div class="bg-secondary btn-xl-square mx-auto" style="width: 120px; height: 120px;">
                             <i class="fas fa-hospital-user text-primary fa-4x"></i>
                         </div>
-                        <a href="#" class="d-block fs-4 my-4">Project managment</a>
-                        <p class="text-white mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia,
-                            minima!</p>
-                        <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
+                        <a href="#" class="d-block fs-4 my-4">Renovations & Remodeling</a>
+                        <p class="text-white mb-4">Transform old spaces into fresh, stylish, and efficient structures that meet today’s standards.</p>
+                        <!-- <a class="btn btn-secondary py-2 px-4" href="#">Read More</a> -->
                     </div>
                     <div class="service-tytle">
                         <div class="d-flex align-items-center justify-content-start ps-4 w-100">
-                            <h4>Project managment</h4>
+                            <h4>Renovations & Remodeling</h4>
                         </div>
                         <div class="btn-xl-square bg-secondary p-4" style="width: 80px; height: 80px;">
                             <i class="fas fa-hospital-user text-primary fa-2x"></i>
@@ -98,20 +95,19 @@
             <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
                 <div class="service-item">
                     <div class="service-img">
-                        <img src="{% static 'mysite/img/service-4.jpg' %}" class="img-fluid w-100" alt="Image">
+                        <img src="{% static 'mysite/img/img22.jpeg' %}" class="img-fluid w-100" alt="Image">
                     </div>
                     <div class="service-content text-center p-4">
                         <div class="bg-secondary btn-xl-square mx-auto" style="width: 100px; height: 100px;">
                             <i class="fas fa-file-invoice-dollar text-primary fa-4x"></i>
                         </div>
-                        <a href="#" class="d-block fs-4 my-4">Virtual Design & Build</a>
-                        <p class="text-white mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia,
-                            minima!</p>
-                        <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
+                        <a href="#" class="d-block fs-4 my-4">Laundry & Utility Installations</a>
+                        <p class="text-white mb-4">Professional setup of laundry spaces and utility systems for homes, apartments, and commercial facilities.</p>
+                        <!-- <a class="btn btn-secondary py-2 px-4" href="#">Read More</a> -->
                     </div>
                     <div class="service-tytle">
                         <div class="d-flex align-items-center justify-content-start ps-4 w-100">
-                            <h4>Virtual Design & Build</h4>
+                            <h4>Laundry & Utility Installations</h4>
                         </div>
                         <div class="btn-xl-square bg-secondary p-4" style="width: 80px; height: 80px;">
                             <i class="fas fa-file-invoice-dollar text-primary fa-2x"></i>
@@ -128,14 +124,13 @@
                         <div class="bg-secondary btn-xl-square mx-auto" style="width: 100px; height: 100px;">
                             <i class="fas fa-cogs text-primary fa-4x"></i>
                         </div>
-                        <a href="#" class="d-block fs-4 my-4">Preconstruction</a>
-                        <p class="text-white mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia,
-                            minima!</p>
-                        <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
+                        <a href="#" class="d-block fs-4 my-4">Project Management</a>
+                        <p class="text-white mb-4">End-to-end supervision to ensure projects are delivered on time, within budget, and to the highest standard.</p>
+                        <!-- <a class="btn btn-secondary py-2 px-4" href="#">Read More</a> -->
                     </div>
                     <div class="service-tytle">
                         <div class="d-flex align-items-center justify-content-start ps-4 w-100">
-                            <h4>Preconstruction</h4>
+                            <h4>Project Management</h4>
                         </div>
                         <div class="btn-xl-square bg-secondary p-4" style="width: 80px; height: 80px;">
                             <i class="fas fa-cogs text-primary fa-2x"></i>
@@ -152,14 +147,13 @@
                         <div class="bg-secondary btn-xl-square mx-auto" style="width: 100px; height: 100px;">
                             <i class="fas fa-sitemap text-primary fa-4x"></i>
                         </div>
-                        <a href="#" class="d-block fs-4 my-4">Design Build</a>
-                        <p class="text-white mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia,
-                            minima!</p>
-                        <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
+                        <a href="#" class="d-block fs-4 my-4">Interior & Finishing Works</a>
+                        <p class="text-white mb-4">Expert finishing, tiling, painting, and fittings that give your space a polished, elegant look.</p>
+                        <!-- <a class="btn btn-secondary py-2 px-4" href="#">Read More</a> -->
                     </div>
                     <div class="service-tytle">
                         <div class="d-flex align-items-center justify-content-start ps-4 w-100">
-                            <h4>Design Build</h4>
+                            <h4>Interior & Finishing Works</h4>
                         </div>
                         <div class="btn-xl-square bg-secondary p-4" style="width: 80px; height: 80px;">
                             <i class="fas fa-sitemap text-primary fa-2x"></i>
@@ -167,9 +161,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.2s">
+            <!-- <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.2s">
                 <a class="btn btn-secondary py-3 px-5 mt-4" href="#">More Services</a>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
@@ -255,79 +249,21 @@
             <h2 class="display-4 text-capitalize mb-3">Our clients reviews.</h2>
         </div>
         <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.4s">
+            {% for testimonial in testimonials %}
             <div class="testimonial-item bg-light p-4">
                 <div class="position-relative">
-                    <i class="fa fa-quote-right fa-2x text-primary position-absolute"
-                        style="bottom: 30px; right: 0;"></i>
+                    <i class="fa fa-quote-right fa-2x text-primary position-absolute" style="bottom: 30px; right: 0;"></i>
                     <div class="mb-4 pb-4 border-bottom border-secondary">
-                        <p class="mb-0">Lorem Ipsum is simply dummy text of the printing Ipsum has been the industry's
-                            standard dummy text ever since the 1500s,
-                        </p>
+                        <p class="mb-0">{{ testimonial.feedback }}</p>
                     </div>
                     <div class="d-flex align-items-center flex-nowrap">
                         <div class="me-4">
-                            <img src="{% static 'mysite/img/testimonial-1.jpg' %}" class="img-fluid w-100"
+                            <img src="{{ testimonial.client_photo.url }}" class="img-fluid w-100"
                                 style="width: 100px; height: 100px;" alt="">
                         </div>
                         <div class="d-block">
-                            <h4 class="text-dark">Client Name</h4>
-                            <p class="m-0 pb-3">Profession</p>
-                            <div class="d-flex text-secondary pe-5">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star text-muted"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="testimonial-item bg-light p-4">
-                <div class="position-relative">
-                    <i class="fa fa-quote-right fa-2x text-primary position-absolute"
-                        style="bottom: 30px; right: 0;"></i>
-                    <div class="mb-4 pb-4 border-bottom border-secondary">
-                        <p class="mb-0">Lorem Ipsum is simply dummy text of the printing Ipsum has been the industry's
-                            standard dummy text ever since the 1500s,
-                        </p>
-                    </div>
-                    <div class="d-flex align-items-center flex-nowrap">
-                        <div class="me-4">
-                            <img src="{% static 'mysite/img/testimonial-2.jpg' %}" class="img-fluid w-100"
-                                style="width: 100px; height: 100px;" alt="">
-                        </div>
-                        <div class="d-block">
-                            <h4 class="text-dark">Client Name</h4>
-                            <p class="m-0 pb-3">Profession</p>
-                            <div class="d-flex text-secondary pe-5">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star text-muted"></i>
-                                <i class="fas fa-star text-muted"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="testimonial-item bg-light p-4">
-                <div class="position-relative">
-                    <i class="fa fa-quote-right fa-2x text-primary position-absolute"
-                        style="bottom: 30px; right: 0;"></i>
-                    <div class="mb-4 pb-4 border-bottom border-secondary">
-                        <p class="mb-0">Lorem Ipsum is simply dummy text of the printing Ipsum has been the industry's
-                            standard dummy text ever since the 1500s,
-                        </p>
-                    </div>
-                    <div class="d-flex align-items-center flex-nowrap">
-                        <div class="me-4">
-                            <img src="{% static 'mysite/img/testimonial-3.jpg' %}" class="img-fluid w-100"
-                                style="width: 100px; height: 100px;" alt="">
-                        </div>
-                        <div class="d-block">
-                            <h4 class="text-dark">Client Name</h4>
-                            <p class="m-0 pb-3">Profession</p>
+                            <h4 class="text-dark">{{ testimonial.client_name }}</h4>
+                            <p class="m-0 pb-3">{{ testimonial.profession }}</p>
                             <div class="d-flex text-secondary pe-5">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -339,6 +275,7 @@
                     </div>
                 </div>
             </div>
+            {% endfor %}
         </div>
     </div>
 </div>
