--- a/mysite/templates/mysite/team.html
+++ b/mysite/templates/mysite/team.html
@@ -23,6 +23,7 @@
                     <h2 class="display-4 text-capitalize mb-3">Expert team members.</h2>
                 </div>
                 <div class="row g-4">
+                    {% for team in teams %}
                     <div class="col-lg-3 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="team-item border border-primary p-1">
                             <div class="team-border-style-1"></div>
@@ -30,7 +31,7 @@
                             <div class="team-border-style-3"></div>
                             <div class="team-border-style-4"></div>
                             <div class="team-img">
-                                <img src="{% static 'mysite/img/team-1.jpg' %}" class="img-fluid w-100" alt="">
+                                <img src="{{ team.photo.url }}" class="img-fluid w-100" alt="">
                                 <div class="team-icon d-flex justify-content-around">
                                     <a class="btn btn-secondary btn-md-square text-white mx-3" href=""><i class="fab fa-facebook-f"></i></a>
                                     <a class="btn btn-secondary btn-md-square text-white me-3" href=""><i class="fab fa-twitter"></i></a>
@@ -39,74 +40,12 @@
                                 </div>
                             </div>
                             <div class="text-center border border-top-0 bg-white py-3">
-                                <h4 class="mb-0">Masud Maria</h4>
-                                <p class="mb-0">Foreman</p>
+                                <h4 class="mb-0">{{ team.name }}</h4>
+                                <p class="mb-0">{{ team.role }}</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="team-item border border-primary p-1">
-                            <div class="team-border-style-1"></div>
-                            <div class="team-border-style-2"></div>
-                            <div class="team-border-style-3"></div>
-                            <div class="team-border-style-4"></div>
-                            <div class="team-img">
-                                <img src="{% static 'mysite/img/team-2.jpg' %}" class="img-fluid w-100" alt="">
-                                <div class="team-icon d-flex justify-content-around">
-                                    <a class="btn btn-secondary btn-md-square text-white mx-3" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-secondary btn-md-square text-white me-3" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="btn btn-secondary btn-md-square text-white me-3" href=""><i class="fab fa-linkedin-in"></i></a>
-                                    <a class="btn btn-secondary btn-md-square text-white me-3" href=""><i class="fab fa-instagram"></i></a>
-                                </div>
-                            </div>
-                            <div class="text-center border border-top-0 bg-white py-3">
-                                <h4 class="mb-0">Masud Maria</h4>
-                                <p class="mb-0">Foreman</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="team-item border border-primary p-1">
-                            <div class="team-border-style-1"></div>
-                            <div class="team-border-style-2"></div>
-                            <div class="team-border-style-3"></div>
-                            <div class="team-border-style-4"></div>
-                            <div class="team-img">
-                                <img src="{% static 'mysite/img/team-3.jpg' %}" class="img-fluid w-100" alt="">
-                                <div class="team-icon d-flex justify-content-around">
-                                    <a class="btn btn-secondary btn-md-square text-white mx-3" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-secondary btn-md-square text-white me-3" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="btn btn-secondary btn-md-square text-white me-3" href=""><i class="fab fa-linkedin-in"></i></a>
-                                    <a class="btn btn-secondary btn-md-square text-white me-3" href=""><i class="fab fa-instagram"></i></a>
-                                </div>
-                            </div>
-                            <div class="text-center border border-top-0 bg-white py-3">
-                                <h4 class="mb-0">Masud Maria</h4>
-                                <p class="mb-0">Foreman</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 wow fadeInUp" data-wow-delay="0.8s">
-                        <div class="team-item border border-primary p-1">
-                            <div class="team-border-style-1"></div>
-                            <div class="team-border-style-2"></div>
-                            <div class="team-border-style-3"></div>
-                            <div class="team-border-style-4"></div>
-                            <div class="team-img">
-                                <img src="{% static 'mysite/img/team-4.jpg' %}" class="img-fluid w-100" alt="">
-                                <div class="team-icon d-flex justify-content-around">
-                                    <a class="btn btn-secondary btn-md-square text-white mx-3" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-secondary btn-md-square text-white me-3" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="btn btn-secondary btn-md-square text-white me-3" href=""><i class="fab fa-linkedin-in"></i></a>
-                                    <a class="btn btn-secondary btn-md-square text-white me-3" href=""><i class="fab fa-instagram"></i></a>
-                                </div>
-                            </div>
-                            <div class="text-center border border-top-0 bg-white py-3">
-                                <h4 class="mb-0">Masud Maria</h4>
-                                <p class="mb-0">Foreman</p>
-                            </div>
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
