--- a/mysite/templates/mysite/base.html
+++ b/mysite/templates/mysite/base.html
@@ -4,7 +4,11 @@
 
 <head>
     <meta charset="utf-8">
+    {% if title %}
+    <title>MINTEXX - {{title}}</title>
+    {% else %}
     <title>MINTEXX</title>
+    {% endif %}
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -51,7 +55,7 @@
         <div class="row gx-0 align-items-center" style="height: 45px;">
             <div class="col-lg-6 text-center text-lg-start mb-lg-0">
                 <div class="d-flex flex-wrap">
-                    <a href="#" class="text-muted me-4"><i class="fas fa-map-marker-alt text-secondary me-2"></i>Oduom-Kumasi</a>
+                    <a class="text-muted me-4"><i class="fas fa-map-marker-alt text-secondary me-2"></i>Oduom-Kumasi</a>
                     <a href="tel:+233244512118" class="text-muted me-4"><i
                             class="fas fa-phone-alt text-secondary me-2"></i>+233244512118</a>
                     <a href="mailto:mintahfrancis120@gmail.com" class="text-muted me-0"><i
@@ -60,8 +64,8 @@
             </div>
             <div class="col-lg-6 text-center text-lg-end">
                 <div class="d-flex align-items-center justify-content-end">
-                    <a href="#" class="text-muted me-3"><i class="fas fa-clock text-secondary me-2"></i>Mon - Sat 8:00 -
-                        17:30, Sunday - CLOSED</a>
+                    <!-- <a href="#" class="text-muted me-3"><i class="fas fa-clock text-secondary me-2"></i>Mon - Sat 8:00 -
+                        17:30, Sunday - CLOSED</a> -->
                     <a href="https://www.facebook.com/share/1DjhXqPN8C/?mibextid=wwXIfr" class="btn btn-primary btn-square border border-white me-3"><i
                             class="fab fa-facebook-f"></i></a>
                     <a href="#" class="btn btn-primary btn-square border border-white me-3"><i
@@ -108,7 +112,7 @@
                 <div class="d-flex align-items-center flex-nowrap pt-3  pt-lg-0 ms-lg-2">
                     <button class="btn btn-primary py-2 px-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i
                             class="fas fa-search"></i></button>
-                    <a href="#" class="btn btn-secondary py-2 px-4 ms-3 flex-wrap flex-sm-shrink-0">Get a Quate</a>
+                    <!-- <a href="#" class="btn btn-secondary py-2 px-4 ms-3 flex-wrap flex-sm-shrink-0">Get a Quate</a> -->
                 </div>
             </div>
         </nav>
@@ -146,9 +150,8 @@
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="footer-item d-flex flex-column">
                         <div class="footer-item">
-                            <h4 class="text-white mb-4">Newsletter</h4>
-                            <p class="mb-3">Dolor amet sit justo amet elitr clita ipsum elitr est.Lorem ipsum dolor sit
-                                amet, consectetur adipiscing elit consectetur adipiscing elit.</p>
+                            <h4 class="text-white mb-4">About Mintexx</h4>
+                            <p class="mb-3">To build safe, sustainable, and innovative structures that add value to lives, businesses, and communities.</p>
                             <div class="position-relative mx-auto">
                                 <input class="form-control w-100 py-3 ps-4 pe-5" type="text"
                                     placeholder="Enter your email">
@@ -161,37 +164,37 @@
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="footer-item d-flex flex-column">
                         <h4 class="text-white mb-4">Explore</h4>
-                        <a href="#"><i class="fas fa-angle-right me-2"></i> Home</a>
-                        <a href="#"><i class="fas fa-angle-right me-2"></i> Services</a>
-                        <a href="#"><i class="fas fa-angle-right me-2"></i> About Us</a>
-                        <a href="#"><i class="fas fa-angle-right me-2"></i> Latest Projects</a>
-                        <a href="#"><i class="fas fa-angle-right me-2"></i> testimonial</a>
-                        <a href="#"><i class="fas fa-angle-right me-2"></i> Our Team</a>
-                        <a href="#"><i class="fas fa-angle-right me-2"></i> Contact Us</a>
+                        <a href="{% url 'index' %}"><i class="fas fa-angle-right me-2"></i> Home</a>
+                        <a href="{% url 'service' %}"><i class="fas fa-angle-right me-2"></i> Services</a>
+                        <a href="{% url 'about_us' %}"><i class="fas fa-angle-right me-2"></i> About Us</a>
+                        <a href="{% url 'project' %}"><i class="fas fa-angle-right me-2"></i> Latest Projects</a>
+                        <a href="{% url 'testimonial' %}"><i class="fas fa-angle-right me-2"></i> testimonial</a>
+                        <a href="{% url 'team' %}"><i class="fas fa-angle-right me-2"></i> Our Team</a>
+                        <a href="{% url 'contact' %}"><i class="fas fa-angle-right me-2"></i> Contact Us</a>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="footer-item d-flex flex-column">
                         <h4 class="text-white mb-4">Our Services</h4>
-                        <a href="#"><i class="fas fa-angle-right me-2"></i> General Construction</a>
-                        <a href="#"><i class="fas fa-angle-right me-2"></i> Property Maintenance</a>
-                        <a href="#"><i class="fas fa-angle-right me-2"></i> Project Managment</a>
-                        <a href="#"><i class="fas fa-angle-right me-2"></i> Virtual Design & Build</a>
-                        <a href="#"><i class="fas fa-angle-right me-2"></i> Residential Construction</a>
-                        <a href="#"><i class="fas fa-angle-right me-2"></i> Preconstruction</a>
-                        <a href="#"><i class="fas fa-angle-right me-2"></i> Design Build</a>
+                        <a href="{% url 'service' %}"><i class="fas fa-angle-right me-2"></i> Residential Construction</a>
+                        <a href="{% url 'service' %}"><i class="fas fa-angle-right me-2"></i> Commercial Maintenance</a>
+                        <a href="{% url 'service' %}"><i class="fas fa-angle-right me-2"></i> Renovations & Remodeling</a>
+                        <a href="{% url 'service' %}"><i class="fas fa-angle-right me-2"></i> Laundry & Utility Installations</a>
+                        <a href="{% url 'service' %}"><i class="fas fa-angle-right me-2"></i> Project Management</a>
+                        <a href="{% url 'service' %}"><i class="fas fa-angle-right me-2"></i> Interior & Finishing Works</a>
+                        
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="footer-item d-flex flex-column">
                         <h4 class="text-white mb-4">Contact Info</h4>
-                        <a href=""><i class="fa fa-map-marker-alt me-2"></i> 123 Street, New York, USA</a>
-                        <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a>
-                        <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a>
-                        <a href=""><i class="fas fa-phone me-2"></i> +012 345 67890</a>
-                        <a href="" class="mb-3"><i class="fas fa-print me-2"></i> +012 345 67890</a>
+                        <a ><i class="fa fa-map-marker-alt me-2"></i> Oduom-Kumasi</a>
+                        <a href="mailto:mintahfrancis120@gmail.com"><i class="fas fa-envelope me-2"></i> mintahfrancis120@gmail.com</a>
+                        <!-- <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a> -->
+                        <a href="tel:+233244512118"><i class="fas fa-phone me-2"></i> +233 244 512 118</a>
+                        <!-- <a href="" class="mb-3"><i class="fas fa-print me-2"></i> +012 345 67890</a> -->
                         <div class="footer-btn d-flex align-items-center">
-                            <a class="btn btn-secondary btn-md-square me-2" href=""><i
+                            <a class="btn btn-secondary btn-md-square me-2" href="https://www.facebook.com/share/1DjhXqPN8C/?mibextid=wwXIfr"><i
                                     class="fab fa-facebook-f text-white"></i></a>
                             <a class="btn btn-secondary btn-md-square me-2" href=""><i
                                     class="fab fa-twitter text-white"></i></a>
@@ -214,14 +217,14 @@
             <div class="row g-4 align-items-center">
                 <div class="col-md-6 text-center text-md-start mb-md-0">
                     <span class="text-body"><a href="#" class="border-bottom text-white"><i
-                                class="fas fa-copyright text-light me-2"></i>Your Site Name</a>, All right
+                                class="fas fa-copyright text-light me-2"></i>Mintexx Ventures</a>, All right
                         reserved.</span>
                 </div>
                 <div class="col-md-6 text-center text-md-end text-body">
                     <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
                     <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
                     <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                    Designed By <a class="border-bottom text-white" href="https://htmlcodex.com">HTML Codex</a>
+                    Designed By <a class="border-bottom text-white" href="https://godeytech.com">Godey Tech</a>
                 </div>
             </div>
         </div>
