--- a/mysite/templates/mysite/blog.html
+++ b/mysite/templates/mysite/blog.html
@@ -23,51 +23,23 @@
                     <h2 class="display-4 text-capitalize mb-3">Our latest news post and articles?</h2>
                 </div>
                 <div class="row g-4">
+                    {% for blog in blogs %}
                     <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="blog-item h-100">
                             <div class="blog-img">
-                                <img src="{% static 'mysite/img/blog-1.jpg' %}" class="img-fluid w-100" alt="">
+                                <img src="{{ blog.image.url }}" class="img-fluid w-100" alt="">
                             </div>
                             <div class="blog-content p-4">
                                 <div class="d-flex justify-content-between mb-3">
-                                    <p class="mb-0"><i class="fa fa-calendar-check text-secondary me-1"></i> 26 April 2025</p>
-                                    <p class="mb-0"><i class="fa fa-user text-secondary me-1"></i> Admin</p>
+                                    <p class="mb-0"><i class="fa fa-calendar-check text-secondary me-1"></i> {{ blog.published_date }}</p>
+                                    <p class="mb-0"><i class="fa fa-user text-secondary me-1"></i> {{ blog.author }}</p>
                                 </div>
-                                <a href="#" class="h4 d-block mb-4">Emerging Tech Trends What to in the Next Decade</a>
+                                <a href="#" class="h4 d-block mb-4">{{ blog.title }}</a>
                                 <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="blog-item h-100">
-                            <div class="blog-img">
-                                <img src="{% static 'mysite/img/blog-2.jpg' %}" class="img-fluid w-100" alt="">
-                            </div>
-                            <div class="blog-content p-4">
-                                <div class="d-flex justify-content-between mb-3">
-                                    <p class="mb-0"><i class="fa fa-calendar-check text-secondary me-1"></i> 26 April 2025</p>
-                                    <p class="mb-0"><i class="fa fa-user text-secondary me-1"></i> Admin</p>
-                                </div>
-                                <a href="#" class="h4 d-block mb-4">Emerging Tech Trends What to in the Next Decade</a>
-                                <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="blog-item h-100">
-                            <div class="blog-img">
-                                <img src="{% static 'mysite/img/blog-3.jpg' %}" class="img-fluid w-100" alt="">
-                            </div>
-                            <div class="blog-content p-4">
-                                <div class="d-flex justify-content-between mb-3">
-                                    <p class="mb-0"><i class="fa fa-calendar-check text-secondary me-1"></i> 26 April 2025</p>
-                                    <p class="mb-0"><i class="fa fa-user text-secondary me-1"></i> Admin</p>
-                                </div>
-                                <a href="#" class="h4 d-block mb-4">Emerging Tech Trends What to in the Next Decade</a>
-                                <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
-                            </div>
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
