--- a/mysite/templates/mysite/contact.html
+++ b/mysite/templates/mysite/contact.html
@@ -25,41 +25,42 @@
                             <h2 class="display-4 text-capitalize mb-3">Send Your Message</h2>
                             <p class="mb-0">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a class="text-primary fw-bold" href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
                         </div>
-                        <form>
+                        <form method="post">
+                            {% csrf_token %}
                             <div class="row g-3">
                                 <div class="col-lg-12 col-xl-6">
                                     <div class="form-floating border border-secondary">
-                                        <input type="text" class="form-control" id="name" placeholder="Your Name">
+                                        <input type="text" class="form-control" id="name" name="name" placeholder="Your Name">
                                         <label for="name">Your Name</label>
                                     </div>
                                 </div>
                                 <div class="col-lg-12 col-xl-6">
                                     <div class="form-floating border border-secondary">
-                                        <input type="email" class="form-control" id="email" placeholder="Your Email">
+                                        <input type="email" class="form-control" id="email" name="email" placeholder="Your Email">
                                         <label for="email">Your Email</label>
                                     </div>
                                 </div>
                                 <div class="col-lg-12 col-xl-6">
                                     <div class="form-floating border border-secondary">
-                                        <input type="phone" class="form-control" id="phone" placeholder="Phone">
+                                        <input type="phone" class="form-control" id="phone" name="phone" placeholder="Phone">
                                         <label for="phone">Your Phone</label>
                                     </div>
                                 </div>
                                 <div class="col-lg-12 col-xl-6">
                                     <div class="form-floating border border-secondary">
-                                        <input type="text" class="form-control" id="project" placeholder="Project">
+                                        <input type="text" class="form-control" id="project" name="project" placeholder="Project">
                                         <label for="project">Your Project</label>
                                     </div>
                                 </div>
                                 <div class="col-12">
                                     <div class="form-floating border border-secondary">
-                                        <input type="text" class="form-control" id="subject" placeholder="Subject">
+                                        <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject">
                                         <label for="subject">Subject</label>
                                     </div>
                                 </div>
                                 <div class="col-12">
                                     <div class="form-floating border border-secondary">
-                                        <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 160px"></textarea>
+                                        <textarea class="form-control" placeholder="Leave a message here" id="message" name="message" style="height: 160px"></textarea>
                                         <label for="message">Message</label>
                                     </div>
                                 </div>
@@ -72,9 +73,10 @@
                     <div class="col-lg-6 wow fadeInRight" data-wow-delay="0.4s">
                         <div class="contact-map h-100 w-100">
                             <iframe class="h-100 w-100" 
-                            style="height: 500px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387191.33750346623!2d-73.97968099999999!3d40.6974881!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sbd!4v1694259649153!5m2!1sen!2sbd" 
+                            style="height: 500px;" src="https://maps.google.com/maps?width=600&height=400&hl=en&q=Oduom%20Kumasi&t=&z=14&ie=UTF8&iwloc=B&output=embed" 
                             loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
+                        
                     </div>
                 </div>
                 <div class="row g-5">
@@ -83,7 +85,7 @@
                             <i class="fas fa-map-marker-alt fa-2x text-secondary me-4"></i>
                             <div>
                                 <h4>Address</h4>
-                                <p class="mb-0">123 North tower New York, USA</p>
+                                <p class="mb-0">Oduom - Kumasi</p>
                             </div>
                         </div>
                     </div>
@@ -92,7 +94,7 @@
                             <i class="fas fa-envelope fa-2x text-secondary me-4"></i>
                             <div>
                                 <h4>Mail Us</h4>
-                                <p class="mb-0">info@example.com</p>
+                                <p class="mb-0">mintahfrancis120@gmail.com</p>
                             </div>
                         </div>
                     </div>
@@ -101,7 +103,7 @@
                             <i class="fa fa-phone-alt fa-2x text-secondary me-4"></i>
                             <div>
                                 <h4>Telephone</h4>
-                                <p class="mb-0">(+012) 3456 7890 123</p>
+                                <p class="mb-0">(+233) 24 451 2118</p>
                             </div>
                         </div>
                     </div>
