--- a/mysite/templates/mysite/feature.html
+++ b/mysite/templates/mysite/feature.html
@@ -15,45 +15,47 @@
             </div>
         </div>
         <!-- Header End -->
-
-        <!-- Features Start -->
-        <div class="container-fluid feature bg-light py-5">
-            <div class="container py-5">
-                <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
-                    <p class="text-uppercase text-secondary fs-5 mb-0">WHy US</p>
-                    <h2 class="display-4 text-capitalize mb-3">Why Choose Us</h2>
+<!-- Features Start -->
+<div class="container-fluid feature bg-light py-5">
+    <div class="container py-5">
+        <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
+            <p class="text-uppercase text-secondary fs-5 mb-0">WHy US</p>
+            <h2 class="display-4 text-capitalize mb-3">Why Choose Us</h2>
+        </div>
+        <div class="row g-4">
+            <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
+                <div class="feature-item text-center border p-5">
+                    <div class="feature-img bg-secondary d-inline-flex p-4">
+                        <i class="fas fa-city text-primary fa-5x"></i>
+                    </div>
+                    <a href="#" class="h4 d-block my-4">Expert Craftsmanship</a>
+                    <p class="mb-0">Our skilled team uses the latest techniques and quality materials to deliver durable
+                        results.</p>
                 </div>
-                <div class="row g-4">
-                    <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="feature-item text-center border p-5">
-                            <div class="feature-img bg-secondary d-inline-flex p-4">
-                                <i class="fas fa-city text-primary fa-5x"></i>
-                            </div>
-                            <a href="#" class="h4 d-block my-4">Expert Engineer</a>
-                            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatem provident incidunt obcaecati.</p>
-                        </div>
+            </div>
+            <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
+                <div class="feature-item text-center border p-5">
+                    <div class="feature-img bg-secondary d-inline-flex p-4">
+                        <i class="fas fa-funnel-dollar text-primary fa-5x"></i>
                     </div>
-                    <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="feature-item text-center border p-5">
-                            <div class="feature-img bg-secondary d-inline-flex p-4">
-                                <i class="fas fa-funnel-dollar text-primary fa-5x"></i>
-                            </div>
-                            <a href="#" class="h4 d-block my-4">Free Estimates</a>
-                            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatem provident incidunt obcaecati.</p>
-                        </div>
+                    <a href="#" class="h4 d-block my-4">Customer-Centered Approach</a>
+                    <p class="mb-0">We listen, advise, and work closely with you to make your dream project a reality.
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.6s">
+                <div class="feature-item text-center border p-5">
+                    <div class="feature-img bg-secondary d-inline-flex p-4">
+                        <i class="fas fa-tools text-primary fa-5x"></i>
                     </div>
-                    <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="feature-item text-center border p-5">
-                            <div class="feature-img bg-secondary d-inline-flex p-4">
-                                <i class="fas fa-tools text-primary fa-5x"></i>
-                            </div>
-                            <a href="#" class="h4 d-block my-4">Quality Materials</a>
-                            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatem provident incidunt obcaecati.</p>
-                        </div>
-                    </div>
+                    <a href="#" class="h4 d-block my-4">Timely Delivery</a>
+                    <p class="mb-0">We value your time, ensuring projects are completed efficiently without compromising
+                        quality.</p>
                 </div>
             </div>
         </div>
-        <!-- Features End -->
+    </div>
+</div>
+<!-- Features End -->
 
 {% endblock %}
