--- a/mysite/templates/mysite/project.html
+++ b/mysite/templates/mysite/project.html
@@ -23,85 +23,31 @@
                     <h2 class="display-4 text-capitalize mb-3">Recent Completed Projects</h2>
                 </div>
                 <div class="row g-5">
+                    {% for project in projects %}
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="project-item">
                             <div class="row g-4">
                                 <div class="col-md-4">
                                     <div class="project-img">
-                                        <img src="{% static 'mysite/img/project-1.jpg' %}" class="img-fluid w-100 pt-3 ps-3" alt="">
+                                        <img src="{{ project.image.url }}" class="img-fluid w-100 pt-3 ps-3" alt="">
                                     </div>
                                 </div>
                                 <div class="col-md-8">
                                     <div class="project-content mb-4">
-                                        <p class="fs-5 text-secondary mb-2">Architecture</p>
-                                        <a href="#" class="h4">We Building Everything</a>
-                                        <p class="mb-0 mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur tempore perferendis velit minus, perspiciatis eveniet adipisci tempora voluptatem quis dolores.</p>
+                                        <p class="fs-5 text-secondary mb-2">{{ project.category.name }}</p>
+                                        <a href="#" class="h4">{{ project.title }}</a>
+                                        <p class="mb-0 mt-3">{{ project.description }}</p>
                                     </div>
                                     <a class="btn btn-primary py-2 px-4" href="#">Read More</a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="project-item">
-                            <div class="row g-4">
-                                <div class="col-md-4">
-                                    <div class="project-img">
-                                        <img src="{% static 'mysite/img/project-2.jpg' %}" class="img-fluid w-100 pt-3 ps-3" alt="">
-                                    </div>
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="project-content mb-4">
-                                        <p class="fs-5 text-secondary mb-2">Interior Design</p>
-                                        <a href="#" class="h4">We Building Everything</a>
-                                        <p class="mb-0 mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur tempore perferendis velit minus, perspiciatis eveniet adipisci tempora voluptatem quis dolores.</p>
-                                    </div>
-                                    <a class="btn btn-primary py-2 px-4" href="#">Read More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="project-item">
-                            <div class="row g-4">
-                                <div class="col-md-4">
-                                    <div class="project-img">
-                                        <img src="{% static 'mysite/img/project-3.jpg' %}" class="img-fluid w-100 pt-3 ps-3" alt="">
-                                    </div>
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="project-content mb-4">
-                                        <p class="fs-5 text-secondary mb-2">House & Exterior</p>
-                                        <a href="#" class="h4">We Building Everything</a>
-                                        <p class="mb-0 mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur tempore perferendis velit minus, perspiciatis eveniet adipisci tempora voluptatem quis dolores.</p>
-                                    </div>
-                                    <a class="btn btn-primary py-2 px-4" href="#">Read More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="project-item">
-                            <div class="row g-4">
-                                <div class="col-md-4">
-                                    <div class="project-img">
-                                        <img src="{% static 'mysite/img/project-4.jpg' %}" class="img-fluid w-100 pt-3 ps-3" alt="">
-                                    </div>
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="project-content mb-4">
-                                        <p class="fs-5 text-secondary mb-2">Interior Design</p>
-                                        <a href="#" class="h4">We Building Everything</a>
-                                        <p class="mb-0 mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur tempore perferendis velit minus, perspiciatis eveniet adipisci tempora voluptatem quis dolores.</p>
-                                    </div>
-                                    <a class="btn btn-primary py-2 px-4" href="#">Read More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.2s">
+                    {% endfor %}
+                   
+                    <!-- <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.2s">
                         <a class="btn btn-secondary py-3 px-5" href="#">More Projects</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
