update on home and service

--- a/mysite/templates/mysite/about.html
+++ b/mysite/templates/mysite/about.html
@@ -162,7 +162,7 @@
                         <div class="counter-item-style"></div>
                         <div class="counter-item-inner p-5">
                             <i class="fas fa-user fa-4x text-secondary"></i>
-                            <h4 class="text-dark my-4">Qualified Engineers</h4>
+                            <h4 class="text-dark my-4">Qualified Workers</h4>
                             <div class="counter-counting">
                                 <span class="text-secondary fs-2 fw-bold" data-toggle="counter-up">10</span>
                                 <span class="h1 fw-bold text-secondary">+</span>
