--- a/mysite/templates/mysite/service.html
+++ b/mysite/templates/mysite/service.html
@@ -138,6 +138,30 @@
                     </div>
                 </div>
             </div>
+            <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
+                <div class="service-item">
+                    <div class="service-img">
+                        <img src="{% static 'mysite/img/img24.jpeg' %}" class="img-fluid w-100" alt="Image">
+                    </div>
+                    <div class="service-content text-center p-4">
+                        <div class="bg-secondary btn-xl-square mx-auto" style="width: 100px; height: 100px;">
+                            <i class="fas fa-cogs text-primary fa-4x"></i>
+                        </div>
+                        <a href="#" class="d-block fs-4 my-4">Sales of Construction Materials</a>
+                        <p class="text-white mb-4">Supplying trusted, high-grade construction materials to ensure strength, durability, and cost efficiency for your
+                        projects.</p>
+                        <!-- <a class="btn btn-secondary py-2 px-4" href="#">Read More</a> -->
+                    </div>
+                    <div class="service-tytle">
+                        <div class="d-flex align-items-center justify-content-start ps-4 w-100">
+                            <h4>Sales of Construction Materials</h4>
+                        </div>
+                        <div class="btn-xl-square bg-secondary p-4" style="width: 80px; height: 80px;">
+                            <i class="fas fa-cogs text-primary fa-2x"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.6s">
                 <div class="service-item">
                     <div class="service-img">
@@ -209,7 +233,7 @@
                         <div class="counter-item-style"></div>
                         <div class="counter-item-inner p-5">
                             <i class="fas fa-user fa-4x text-secondary"></i>
-                            <h4 class="text-dark my-4">Qualified Engineers</h4>
+                            <h4 class="text-dark my-4">Workers</h4>
                             <div class="counter-counting">
                                 <span class="text-secondary fs-2 fw-bold" data-toggle="counter-up">53</span>
                                 <span class="h1 fw-bold text-secondary">+</span>
