modified the about us

--- a/mysite/templates/mysite/index.html
+++ b/mysite/templates/mysite/index.html
@@ -111,11 +111,10 @@
                 <div class="about-item-content">
                     <p class="text-uppercase text-secondary fs-5 mb-0">WE ARE CONSTRUCTION COMPANY</p>
                     <h2 class="display-4 text-capitalize mb-3">Making your vision come true at the basics.</h2>
-                    <p class="mb-4 fs-5">At Mintexx Ventures, we don't just construct buildings—we bring visions to
-                        life. With a commitment to excellence,
-                        innovation, and reliability, we provide top-quality construction solutions that stand the test
-                        of time. From concept to
-                        completion, our team ensures every project reflects precision, durability, and style.
+                    <p class="mb-4 fs-5">Founded in 2020, Mintexx Ventures has grown into a trusted name in the construction industry. We don’t just construct
+                    buildings—we bring visions to life. With a commitment to excellence, innovation, and reliability, we provide top-quality
+                    construction solutions that stand the test of time. From concept to completion, our team ensures every project reflects
+                    precision, durability, and style.
                     </p>
                     <div class="pb-4 mb-4 border-bottom">
                         <div class="row g-4">
