--- a/mysite/templates/mysite/index.html
+++ b/mysite/templates/mysite/index.html
@@ -376,7 +376,7 @@
                             <i class="fas fa-thumbs-up fa-4x text-secondary"></i>
                             <h4 class="text-dark my-4">Completed Projects</h4>
                             <div class="counter-counting">
-                                <span class="text-secondary fs-2 fw-bold" data-toggle="counter-up">426</span>
+                                <span class="text-secondary fs-2 fw-bold" data-toggle="counter-up">25</span>
                                 <span class="h1 fw-bold text-secondary">+</span>
                             </div>
                         </div>
@@ -391,7 +391,7 @@
                             <i class="fas fa-users fa-4x text-secondary"></i>
                             <h4 class="text-dark my-4">Happy Customers</h4>
                             <div class="counter-counting">
-                                <span class="text-secondary fs-2 fw-bold" data-toggle="counter-up">503</span>
+                                <span class="text-secondary fs-2 fw-bold" data-toggle="counter-up">25</span>
                                 <span class="h1 fw-bold text-secondary">+</span>
                             </div>
                         </div>
@@ -419,9 +419,9 @@
                         <div class="counter-item-style"></div>
                         <div class="counter-item-inner p-5">
                             <i class="fas fa-heart fa-4x text-secondary"></i>
-                            <h4 class="text-dark my-4">Years Experiance</h4>
+                            <h4 class="text-dark my-4">Years Experience</h4>
                             <div class="counter-counting">
-                                <span class="text-secondary fs-2 fw-bold" data-toggle="counter-up">15</span>
+                                <span class="text-secondary fs-2 fw-bold" data-toggle="counter-up">6</span>
                                 <span class="h1 fw-bold text-secondary">+</span>
                             </div>
                         </div>
