--- a/mysite/templates/mysite/base.html
+++ b/mysite/templates/mysite/base.html
@@ -10,6 +10,7 @@
     <title>MINTEXX</title>
     {% endif %}
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <link rel="icon" href="{% static 'mysite/img/logo.png' %}" type="image/jpeg">
     <meta content="" name="keywords">
     <meta content="" name="description">
 
